# exploration-preresearch

./: README.md
src/explorer/: CMakeLists.txt  package.xml
src/explorer/include/: explorer.h
src/explorer/src/: explorer.cpp  explorer_node.cpp
src/local_planner/src/: planner.cpp
src/path_finder/src/: path_finder.cpp
src/simulator/launch/: test.launch
src/simulator/rviz/: video.rviz
src/trajectory_tracker/include/: vehicle.h
src/trajectory_tracker/src/: trajectory_tracker.cpp
